<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PCCU租屋網</string>
    <string name="signin_btn">登入</string>
    <string name="pccu">文大租屋</string>
    <string name="signin">會員登入</string>
    <string name="id">請輸入帳號(電子郵件或手機號碼)</string>
    <string name="password">密碼</string>
    <string name="registered">註冊會員</string>
    <string name="bt4">忘記密碼?</string>
    <string name="tv3">註冊會員</string>
    <string name="tv7">租屋搜尋</string>
    <string name="string_tv7">租屋搜尋</string>
    <string name="tv8">TODO</string>
    <string name="account">帳號</string>
    <string name="signup">註冊會員</string>
    <string name="plz_input_accout">請輸入帳號</string>
    <string name="plz_input_pw">請輸入密碼</string>
    <string name="register_success">註冊成功</string>
    <string name="signout">登出</string>
    <string name="bt_back">返回</string>
    <string name="sign_success">登入成功</string>
    <string name="landlord">房東</string>
    <string name="student">學生</string>
    <string name="account_id">房東(請輸入身分證)/學生(請輸入學號)</string>
    <string name="emailckeck">請到信箱做驗證</string>
    <string name="remark">備註</string>
    <string name="money">價錢(一學期)</string>
    <string name="title">標題</string>
    <string name="room">房型</string>
    <string name="parkingspace">機車停車位</string>
    <string name="pet">寵物</string>
    <string name="address">地址</string>
    <string name="waterfee">水費</string>
    <string name="electricityfee">電費</string>
    <string name="internet">網路</string>
    <string name="upload_image">上傳圖片</string>
    <string name="type_in">請輸入</string>
    <string name="send">送出</string>
    <string name="plz_pick_img">請選擇照片</string>
    <string name="loading_img_fail">讀取圖片失敗</string>
    <string name="pick_img">選擇照片</string>
    <string name="upload_success">上傳成功</string>
    <string name="about">&#160;&#160;「文大租屋」所提供的是學生租屋資訊平台服務，使用者可以依照「文大租屋」所提供的功能去瀏覽、搜尋、比對資訊，例如同樣房型的價錢差異等。但是，「文大租屋」所刊載的房屋資訊，都是由房東或其他第三人所提供，所以其刊載亦不代表「文大租屋」有任何明示或默示推薦或引介之意。
        \n\n&#160;&#160;&#160;此外，「文大租屋」亦不介入房東與房客磋商或交易，使用者可以在瀏覽、搜尋或比對房屋資訊後，根據所取得的相關資訊，自行與房東聯繫，但使用者是否、以及如何與房東或第三人進行磋商或交易，均與「文大租屋」無關。
        \n\n&#160;&#160;「文大租屋」無法保證所有刊載於「文大租屋」的資料以及訊息，均為正確、及時、完整的資料，如果刊載於「文大租屋」的資料或訊息，與原始資料有出入，仍以原始資料為準。</string>
</resources>
